# CpuRayTracingRenderer

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CpuRayTracingRenderer.sln  CpuRayTracingRenderer.vcxproj  CpuRayTracingRenderer.vcxproj.filters  CpuRayTracingRenderer_library.vcxproj  CpuRayTracingRenderer_library.vcxproj.filters  README.md  RayTracing.ppm  ThreadPool.h  TinyGlm.cpp  TinyGlm.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  packages.config
Debug/: CpuRayTracingRenderer.exe.recipe  CpuRayTracingRenderer.ilk  CpuRayTracingRenderer.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/CpuRayTr.2e4c9d6d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CpuRayTracingRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
building/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CpuRayTracingRenderer.sln  CpuRayTracingRenderer.vcxproj  CpuRayTracingRenderer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cmake/: SDL2Config.cmake
include/mylib/: BVH.h  BlendPostProcess.h  Bound.h  Camera.h  DielectricMaterial.h  DiffuseMaterial.h  IPostProcess.h  IShader.h  InputHandle.h  Intersection.h  MessageQueue.h  OBJLoader.h  Object.h  PBRMaterial.h  PostProcessHandle.h  PublicSingleton.h  Ray.h  Rectangles.h  Renderer.h  SDLWindows.h  Scene.h  Sphere.h  ThreadPool.h  TinyGlm.h  Triangle.h  Utils.h
src/: BVH.cpp  BlendPostProcess.cpp  Bound.cpp  Camera.cpp  DielectricMaterial.cpp  DiffuseMaterial.cpp  IPostProcess.cpp  IShader.cpp  InputHandle.cpp  Intersection.cpp  OBJLoader.cpp  Object.cpp  PBRMaterial.cpp  PostProcessHandle.cpp  PublicSingleton.cpp  Ray.cpp  Rectangles.cpp  Renderer.cpp  SDLWindows.cpp  Scene.cpp  Sphere.cpp  ThreadPool.cpp  TinyGlm.cpp  Triangle.cpp  main.cpp
x64/Debug/: CpuRayTracingRenderer.exe.recipe  CpuRayTracingRenderer.ilk  CpuRayTracingRenderer.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/CpuRayTr.2e4c9d6d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CpuRayTracingRenderer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: CpuRayTracingRenderer.exe.recipe  CpuRayTracingRenderer.iobj  CpuRayTracingRenderer.ipdb  CpuRayTracingRenderer.vcxproj.FileListAbsolute.txt
x64/Release/CpuRayTr.2e4c9d6d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CpuRayTracingRenderer.lastbuildstate  CpuRayTracingRenderer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
